# wasm_test

./: README.md  index.html  package-lock.json  package.json
src/: main.ts  wasm1.ts  wasm2.ts
wasm1/: Cargo.toml
wasm1/pkg/: package.json  wasm1.js  wasm1_bg.wasm
wasm1/src/: lib.rs
wasm2/: Cargo.toml
wasm2/pkg/: package.json  wasm2.d.ts  wasm2.js  wasm2_bg.wasm  wasm2_bg.wasm.d.ts
